examples/test/testpolicy7803.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7803
  namespace: namespace160
spec:
  podSelector:
    matchLabels:
      key38: value49
      key33: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value7
      podSelector:
        matchLabels:
          key15: value4
          key26: value40
          key24: value37
